# optimization-openworld

./: .gitignore  CMakeLists.txt  README.md
resource/: Penguin.mtl
src/: main.cpp
src/Core/: IGridable.cpp  IGridable.h  SpatialHashGrid.cpp  SpatialHashGrid.h
src/GameObject/: GameObject.cpp  GameObject.h
src/Mesh/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/Rendering/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
src/Util/: GUI.cpp  GUI.h
src/World/: World.cpp  World.h
src/shaders/: basic.frag  basic.vert
